--- a/.gitignore
+++ b/.gitignore
@@ -93,7 +93,8 @@ dist
 
 # Gatsby files
 .cache/
-# Comment in the public line if your project uses Gatsby and not Next.js
+# Comment in the public line in if your project uses Gatsby and not Next.js
+# https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
 # vuepress build output
@@ -128,5 +129,4 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# macOS
 .DS_Store
