--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
-    "graphql": "^16.6.0",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.6.0",
     "jwt-decode": "^4.0.0",
+    "mongoose": "^8.13.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
