--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^4.0.1",
     "brcypt": "^1.0.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^8.5.1",
