--- a/server/package.json
+++ b/server/package.json
@@ -23,11 +23,11 @@
     "graphql": "^16.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.13.2",
+    "nodemon": "^3.1.0",
     "typescript": "^5.4.5",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.8",
-    "nodemon": "^3.1.0"
+    "@types/node": "^20.14.8"
   }
 }
